fix: Fix projects page content overflowing device with due to pre tag (#112)

--- a/src/theme/MainArea/styles.module.css
+++ b/src/theme/MainArea/styles.module.css
@@ -1,8 +1,11 @@
 .mainArea {
-  margin: auto;
+  margin: 0;
 }
 
 @media screen and (min-width: 992px) {
+  .mainArea {
+    margin: auto;
+  }
   .normal {
     max-width: 1200px;
   }
